[gd_scene load_steps=13 format=3 uid="uid://3l0oibljbbmd"]

[ext_resource type="Script" path="res://ScenesAndScripts/coin_flipper.gd" id="1_jpk6n"]
[ext_resource type="Texture2D" uid="uid://cb7rvd8oy1pqf" path="res://Assets/Art/coinCross.svg" id="1_n7riv"]
[ext_resource type="FontFile" uid="uid://bvyetbh4mdef1" path="res://Assets/Fonts/RoundStyle-Bold.ttf" id="3_5i8dv"]
[ext_resource type="AudioStream" uid="uid://cb5r1ueajpgtn" path="res://Assets/Sound/coin-flip-shimmer-85750.mp3" id="3_toohn"]
[ext_resource type="FontFile" uid="uid://667cwqq4m2ke" path="res://Assets/Fonts/Stimcard.ttf" id="4_6jgdw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kbs2q"]
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_60sr4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onafi"]
content_margin_top = 20.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mpn31"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 20
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_top = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bi3wx"]
content_margin_top = 20.0
bg_color = Color(0.72549, 0.72549, 0.72549, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Theme" id="Theme_6mrsb"]
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/constants/outline_size = 15
Button/font_sizes/font_size = 64
Button/fonts/font = ExtResource("3_5i8dv")
Button/styles/disabled = SubResource("StyleBoxFlat_kbs2q")
Button/styles/focus = SubResource("StyleBoxEmpty_60sr4")
Button/styles/hover = SubResource("StyleBoxFlat_onafi")
Button/styles/normal = SubResource("StyleBoxFlat_mpn31")
Button/styles/pressed = SubResource("StyleBoxFlat_bi3wx")

[sub_resource type="Theme" id="Theme_h4ofu"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/colors/font_outline_color = Color(1, 1, 1, 1)
Label/constants/outline_size = 12
Label/font_sizes/font_size = 32
Label/fonts/font = ExtResource("4_6jgdw")

[node name="CoinFlipper" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jpk6n")
anim_vel = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Coin1" type="TextureRect" parent="VBoxContainer/HBoxContainer" groups=["Coins"]]
layout_mode = 2
texture = ExtResource("1_n7riv")
stretch_mode = 4

[node name="Coin2" type="TextureRect" parent="VBoxContainer/HBoxContainer" groups=["Coins"]]
layout_mode = 2
texture = ExtResource("1_n7riv")
stretch_mode = 4

[node name="Coin3" type="TextureRect" parent="VBoxContainer/HBoxContainer" groups=["Coins"]]
layout_mode = 2
texture = ExtResource("1_n7riv")
stretch_mode = 4

[node name="Flip" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_6mrsb")
text = "LANCIA!"

[node name="Prompt" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_h4ofu")
text = "2 monete uguali = stessa linea su entrambi gli esagrammi
3 monete uguali = linea opposta sul secondo esagramma
Testa = linea continua; Croce = linea spezzata"
horizontal_alignment = 1

[node name="Sounds" type="Node" parent="."]

[node name="CoinFlip" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_toohn")
volume_db = 10.0
mix_target = 1
bus = &"SFX"

[connection signal="pressed" from="VBoxContainer/Flip" to="." method="_on_flip_pressed"]
